fixing alignment of social media bar

--- a/public_html/css/global.css
+++ b/public_html/css/global.css
@@ -225,7 +225,7 @@ header h3 {
 	overflow: hidden;
 	text-align: center;
 	float: left;
-	width: 140%;
+	width: 100%;
 	position: relative;
 	height: 10%;
 }
